Responsive Web Design commit 1. Will push another update to correct mobile spacing

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,222 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        width: 800px;
+      }
+    }
+
+@media screen and (max-width: 500px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+     
+      }
+
+      nav a {
+        text-decoration: none;
+        color: grey;
+        border: 0.5px solid lightgrey;
+        display: flex;
+        justify-content: center;
+        order: 2;
+        width: 100%;
+        padding: 20px;
+      }
+
+      nav .logo {
+        padding: 10px;
+        display: flex;
+        order: 1;
+        justify-content: center;
+        object-fit: contain;
+    }
+
+    header {
+        width: 100%;
+        margin-top: 50px;
+        margin-bottom: 50px;
+}
+    .header-img {
+        display: none;
+    }
+
+.top-content {
+    width: 500px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+}
+.top-content div {
+	width: 100%;
+}
+.bottom-content {
+	width: 500px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.bottom-content div {
+	width: 100%;
+    padding: 10px;
+    flex-wrap: nowrap;
+}
+
+}
+
+
+
+
+
+nav {
+	margin: auto;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    align-items: center;
+}
+
+nav a {
+	text-decoration: none;
+	color: grey;
+	
+}
+
+nav .logo {
+    padding-left: 20px;
+}
+
+header {
+    width:100%;
+    line-height: 0.75;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+
+}
+
+
+header .title {
+	font-size: 68px;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-right: 40px;
+	
+}
+
+header .title button {
+	border: 1px solid black;
+	margin-top: 0px;
+	padding: 6px 40px;
+}
+header .header-img {
+    object-fit: contain;
+}
+
+.top-content {
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+}
+.top-content div {
+	padding: 10px;
+	width: 48%;
+}
+.image-container {
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    width: 100%;
+}
+
+.bottom-content {
+	width: 100%;
+	display: flex;
+}
+
+.bottom-content div {
+	width: 33%;
+	padding: 10px;
+}
+
+.contact {
+    margin: 10px;
+    margin-top: 20px
+}
+
+body { /* centers the website */
+	width: 100%;
+	margin: 0 auto;
+}
+
+footer {
+	margin-top: 50px;
+	text-align: center;
+}
 
 
